[tool.poetry]
name = "music-analyser"
version = "0.1.0"
description = ""
authors = ["Stuart Cook <mail@stuartncook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
